--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,20 +69,21 @@
     <Compile Include="Assets\Scripts\CombatSet\EnemyCharacter.cs" />
     <Compile Include="Assets\Scripts\SceneObject.cs" />
     <Compile Include="Assets\Scripts\ItemDragger.cs" />
+    <Compile Include="Assets\Scripts\CombatSet\SkillS\SkillScriptableObject.cs" />
     <Compile Include="Assets\Scripts\CombatSet\ActionButtonManager.cs" />
     <Compile Include="Assets\Scripts\ItemDatabase.cs" />
     <Compile Include="Assets\Scripts\DialogueMenu.cs" />
     <Compile Include="Assets\Scripts\MainMenuController.cs" />
     <Compile Include="Assets\Scripts\SubMenu.cs" />
     <Compile Include="Assets\Scripts\UIController.cs" />
+    <Compile Include="Assets\Scripts\CombatSet\LifeBarController.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
     <Compile Include="Assets\Scripts\Dialogue.cs" />
     <Compile Include="Assets\Scripts\ClickableObject.cs" />
     <Compile Include="Assets\Scripts\ArrowColliderManager.cs" />
     <Compile Include="Assets\Scripts\GameScene.cs" />
     <Compile Include="Assets\Scripts\DialogueBoxManager.cs" />
-    <Compile Include="Assets\Scripts\CombatSet\LifeBarController.cs" />
-    <Compile Include="Assets\Scripts\CombatSet\SkillS\SkillScriptableObject.cs" />
+    <Compile Include="Assets\Scripts\CombatSet\SkillS\SkillEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
